# catswarm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  resume.md  suggestions.md
docs/: blog.html  index.html  og-image.html
src/: app.rs  click.rs  daynight.rs  heatmap.rs  main.rs  mode.rs  particles.rs  toy.rs  tray.rs
src/cat/: animation.rs  mod.rs  personality.rs
src/debug/: mod.rs  ring.rs  timer.rs
src/ecs/: components.rs
src/ecs/systems/: behavior.rs  click.rs  interaction.rs  mod.rs  mouse.rs  movement.rs  spatial.rs  towers.rs  window_aware.rs
src/platform/: win32.rs
src/render/: heatmap_pipeline.rs  instance.rs  mod.rs  pipeline.rs  trail.rs
src/render/shaders/: cat.wgsl  heatmap.wgsl  trail.wgsl
src/spatial/: mod.rs
src/util/: pool.rs
