[package]
name = "pettoy"
version = "0.2.0"
edition = "2021"
description = "Transparent desktop toy - 1000+ procedural cats roaming your screen"
authors = ["trent"]
license = "MIT"

[dependencies]
# GPU / Windowing
wgpu = "27"
wgpu-types = "27"
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"
pollster = "0.4"                # block_on for async wgpu init
bytemuck = { version = "1", features = ["derive"] }

# ECS
hecs = "0.10"

# Math
glam = { version = "0.29", features = ["bytemuck"] }

# Randomness
fastrand = "2"

# Time
instant = "0.1"

# Debug overlay
egui = "0.33"
egui-winit = "0.33"
egui-wgpu = "0.33"

# Logging
log = "0.4"
env_logger = "0.11"

# Win32 interop (window enumeration, click-through, transparency)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1          # still want playable framerate in dev
